cmake_minimum_required(VERSION 3.5)
project(wpn114)

add_subdirectory(wpn114audio)
add_subdirectory(wpn114network)
add_subdirectory(wpn114devices)
add_subdirectory(wpn114sampling)
add_subdirectory(wpn114plugins)
add_subdirectory(wpn114spatial)
add_subdirectory(wpn114time)
add_subdirectory(wpn114synthesis)
add_subdirectory(wpn114fft)
add_subdirectory(wpn114js)
add_subdirectory(wpn114utilities)
